--- a/ansible/kubernetes/playbooks/templates/custom-cilium-helmchart.yaml.j2
+++ b/ansible/kubernetes/playbooks/templates/custom-cilium-helmchart.yaml.j2
@@ -19,8 +19,8 @@ spec:
     bgp:
       enabled: false
     cluster:
-      name: kubernetes
-      id: 1
+      name: {{ lookup('env', 'ENVIRONMENT') }}
+      id: {{ lookup('env', 'CILIUM_ID') }}
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
