--- a/ansible/kubernetes/playbooks/templates/custom-cilium-helmchart.yaml.j2
+++ b/ansible/kubernetes/playbooks/templates/custom-cilium-helmchart.yaml.j2
@@ -25,7 +25,7 @@ spec:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
     gatewayAPI:
-      enabled: true
+      enabled: false
     endpointRoutes:
       enabled: true
     hubble:
