update flux bootstrap

--- a/ansible/kubernetes/playbooks/templates/custom-cluster-settings.yaml.j2
+++ b/ansible/kubernetes/playbooks/templates/custom-cluster-settings.yaml.j2
@@ -16,3 +16,4 @@ data:
   CILIUM_IPAM_CIDR: "{{ cilium_ipam_cidr }}"
   CILIUM_MESH_LB_IP: "{{ cilium_mesh_lb_ip }}"
   K8S_SERVICE_HOST: "{{ k3s_registration_address }}"
+  TIMEZONE: "{{ timezone }}"
