fix secret/setting substition

--- a/ansible/kubernetes/playbooks/templates/custom-cluster-secrets-secret.yaml.j2
+++ b/ansible/kubernetes/playbooks/templates/custom-cluster-secrets-secret.yaml.j2
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: shared-secrets
+  name: cluster-secrets
   namespace: flux-system
 type: Opaque
 stringData:
