--- a/ansible/kubernetes/playbooks/templates/custom-external-secrets-helmchart.yaml.j2
+++ b/ansible/kubernetes/playbooks/templates/custom-external-secrets-helmchart.yaml.j2
@@ -19,6 +19,29 @@ spec:
     serviceAccount:
       create: true
       name: "external-secret"
+      automount: false
+    extraVolumeMounts:
+    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+      name: serviceaccount-token
+    extraVolumes:
+    - name: serviceaccount-token
+      projected:
+        defaultMode: 0444
+        sources:
+        - serviceAccountToken:
+            expirationSeconds: 3607
+            path: token
+        - configMap:
+            name: kube-root-ca.crt
+            items:
+            - key: ca.crt
+              path: ca.crt
+        - downwardAPI:
+            items:
+            - path: namespace
+              fieldRef:
+                apiVersion: v1
+                fieldPath: metadata.namespace
     podSecurityContext:
       fsGroup: 1000
     securityContext:
@@ -34,10 +57,18 @@ spec:
     resources:
       limits:
         cpu: 200m
-        memory: 128Mi
+        memory: 256Mi
       requests:
-        cpu: 10m
-        memory: 32Mi
+        cpu: 50m
+        memory: 128Mi
+    certController:
+      resources:
+        limits:
+          cpu: 100m
+          memory: 384Mi
+        requests:
+          cpu: 50m
+          memory: 256Mi
     webhook:
       image:
         repository: ghcr.io/external-secrets/external-secrets
@@ -57,7 +88,31 @@ spec:
       resources:
         limits:
           cpu: 100m
-          memory: 128Mi
+          memory: 256Mi
         requests:
-          cpu: 10m
-          memory: 32Mi
+          cpu: 50m
+          memory: 128Mi
+      serviceAccount:
+        automount: false
+      extraVolumeMounts:
+      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+        name: serviceaccount-token
+      extraVolumes:
+      - name: serviceaccount-token
+        projected:
+          defaultMode: 0444
+          sources:
+          - serviceAccountToken:
+              expirationSeconds: 3607
+              path: token
+          - configMap:
+              name: kube-root-ca.crt
+              items:
+              - key: ca.crt
+                path: ca.crt
+          - downwardAPI:
+              items:
+              - path: namespace
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.namespace
